# docker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0002_rename_user_habit_owner.py  0002_rename_user_habit_owner_remove_habit_duration_and_more.py  0003_alter_habit_owner.py  0003_remove_habit_duration_habit_time_complete.py  0004_alter_habit_owner.py  0004_alter_habit_related_habit.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_alter_user_options.py  0004_user_tg_id.py
